// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Publish command e2e > 'npm 10' > publishes a first version of a package 1`] = `
"🦋 changeset v[version]

Received 404 for npm info pkg-a

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

Published pkg-a@1.0.0!

Successfully published:
pkg-a@1.0.0
◇  Created git tag.
"
`;

exports[`Publish command e2e > 'npm 10' > surfaces publish failures for bad credentials 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: E401
401 Unauthorized - PUT [registry-url]/pkg-a

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'npm 10' > surfaces publish failures when not logged in 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: ENEEDAUTH
This command requires you to be logged in to [registry-url]/
You need to authorize this machine using \`npm adduser\`

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'npm 10' > surfaces web-auth OTP publish failures in non-tty mode 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: EOTP
This operation requires a one-time password from your authenticator.
You can provide a one-time password by passing --otp=<code> to the command you ran.
If you already provided a one-time password then it is likely that you either typoed
it, or it timed out. Please try again.

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'npm 11' > publishes a first version of a package 1`] = `
"🦋 changeset v[version]

Received 404 for npm info pkg-a

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

Published pkg-a@1.0.0!

Successfully published:
pkg-a@1.0.0
◇  Created git tag.
"
`;

exports[`Publish command e2e > 'npm 11' > surfaces publish failures for bad credentials 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: E401
401 Unauthorized - PUT [registry-url]/pkg-a

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'npm 11' > surfaces publish failures when not logged in 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: ENEEDAUTH
This command requires you to be logged in to [registry-url]/
You need to authorize this machine using \`npm adduser\`

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'npm 11' > surfaces web-auth OTP publish failures in non-tty mode 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: EOTP
This operation requires a one-time password.
Open this URL in your browser to authenticate:
  [registry-url]/-/auth/cli/[uuid]

After authenticating, your token can be retrieved from:
  [registry-url]/-/v1/done?authId=[uuid]

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'npm 12' > publishes a first version of a package 1`] = `
"🦋 changeset v[version]

Received 404 for npm info pkg-a

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

Published pkg-a@1.0.0!

Successfully published:
pkg-a@1.0.0
◇  Created git tag.
"
`;

exports[`Publish command e2e > 'npm 12' > surfaces publish failures for bad credentials 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: E401
401 Unauthorized - PUT [registry-url]/pkg-a

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'npm 12' > surfaces publish failures when not logged in 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: ENEEDAUTH
This command requires you to be logged in to [registry-url]/
You need to authorize this machine using \`npm login\`

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'npm 12' > surfaces web-auth OTP publish failures in non-tty mode 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: EOTP
This operation requires a one-time password.
Open this URL in your browser to authenticate:
  [registry-url]/-/auth/cli/[uuid]

After authenticating, your token can be retrieved from:
  [registry-url]/-/v1/done?authId=[uuid]

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'pnpm 10 + npm 10' > publishes a first version of a package 1`] = `
"🦋 changeset v[version]

Received 404 for pnpm info pkg-a

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

Published pkg-a@1.0.0!

Successfully published:
pkg-a@1.0.0
◇  Created git tag.
"
`;

exports[`Publish command e2e > 'pnpm 10 + npm 10' > surfaces publish failures for bad credentials 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: E401
401 Unauthorized - PUT [registry-url]/pkg-a

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'pnpm 10 + npm 10' > surfaces publish failures when not logged in 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: ENEEDAUTH
This command requires you to be logged in to [registry-url]/
You need to authorize this machine using \`npm adduser\`

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'pnpm 10 + npm 10' > surfaces web-auth OTP publish failures in non-tty mode 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: EOTP
This operation requires a one-time password from your authenticator.
You can provide a one-time password by passing --otp=<code> to the command you ran.
If you already provided a one-time password then it is likely that you either typoed
it, or it timed out. Please try again.

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'pnpm 11' > publishes a first version of a package 1`] = `
"🦋 changeset v[version]

Received 404 for pnpm info pkg-a

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

Published pkg-a@1.0.0!

Successfully published:
pkg-a@1.0.0
◇  Created git tag.
"
`;

exports[`Publish command e2e > 'pnpm 11' > surfaces publish failures for bad credentials 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: E401
401 Unauthorized - PUT [registry-url]/pkg-a

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'pnpm 11' > surfaces publish failures when not logged in 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: E401
401 Unauthorized - PUT [registry-url]/pkg-a

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'pnpm 11' > surfaces web-auth OTP publish failures in non-tty mode 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: ERR_PNPM_OTP_NON_INTERACTIVE
The registry requires additional authentication, but pnpm is not running in an interactive terminal

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'yarn 4' > publishes a first version of a package 1`] = `
"🦋 changeset v[version]

Received 404 for yarn npm info pkg-a

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

Published pkg-a@1.0.0!

Successfully published:
pkg-a@1.0.0
◇  Created git tag.
"
`;

exports[`Publish command e2e > 'yarn 4' > surfaces publish failures for bad credentials 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: YN0041
Invalid authentication (as an unknown user)

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'yarn 4' > surfaces publish failures when not logged in 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: YN0033
No authentication configured for request

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;

exports[`Publish command e2e > 'yarn 4' > surfaces web-auth OTP publish failures in non-tty mode 1`] = `
"🦋 changeset v[version]

These packages will be published as they were not found in the registry:
pkg-a@1.0.0
0 packages are already published.

An error occurred while publishing pkg-a: YN0041
Invalid OTP token

Some packages failed to publish:
pkg-a@1.0.0
🦋 Exited with code 1

"
`;
